# codeAI

./: .gitattributes  BackendProfiler.pyproj  LICENSE  README.md  docker-compose.yml  package.json  pyproject.toml  rebuild_backend_python313_container.ps1  run_profiler_backend.py  run_profiler_backend_container.ps1  verify_python313_container.ps1
.github/: copilot-instructions.md
.github/workflows/: codeql.yml
backend/: admin_router.py  auth.py  auth_router.py  cli_generator.py  main.py  non_python_code_generator.py  python_code_generator.py
backend/generators/: __init__.py  facade.py  models.py
backend/llm/: admin_capabilities.py  orchestrator.py
backend/marketplace/: router.py
custom-server/: Dockerfile
docs/: admin-dashboard-overview-legacy-block-checklist.md  admin-dashboard-section-linkage-checklist.md  admin-dashboard-ui-identification-id-table.md  admin-dashboard-ui-ux-browser-blueprint.md  backend-runtime-analysis-checklist.md  final_readiness_checklist.md  frontend-stale-bundle-mitigation-checklist.md  multi_generator_semantic_gate_verification.md  orchestrator-multigenerator-upgrade-status.md  system-cleanup-checklist.md
reports/: awq-recovery-checklist-2026-04-27.md  commit-plan-2026-04-27.md
tools/: inspect_python_fastapi_artifacts.py  rerun_past_failure_outputs.py  rerun_phaseb_only.py  verify_current_common_failures.py  verify_generator_checklist_fix.py  verify_generator_checklist_self_reference.py  verify_multi_code_generator.py  verify_multi_code_generator_semantic_gate.py  verify_python_fastapi_semantic_gate_fix.py
(+42 files in other folders)
