[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeai"
version = "0.0.0"
description = "codeAI backend runtime"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg2-binary>=2.9,<3.0",
    "bcrypt>=4.1,<5.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "pydantic>=2.12,<3.0",
    "httpx>=0.28,<1.0",
    "requests>=2.32,<3.0",
    "redis>=5.2,<6.0",
    "Pillow>=10.4,<12.0",
    "torch>=2.6,<3.0",
    "qdrant-client>=1.12,<2.0",
    "grpcio>=1.71,<2.0",
    "email-validator>=2.2,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "webauthn>=2.0,<3.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*"]
